fix(cta-lead-gen): adjust spacing to 32px

--- a/blocks/cta/cta.css
+++ b/blocks/cta/cta.css
@@ -44,7 +44,7 @@
     display: flex;
     flex-flow: column;
     gap: var(--spacer-layout-01);
-    margin-top: var(--spacer-layout-04);
+    margin-top: var(--spacer-layout-03);
     align-items: center;
 }
 
